TargetConnectionManager allows concurrent connections (#360)
* Use vertx-fib-demo:0.6.0

Deploy one without SSL or auth, one with just auth, and one with both

* Rename test class and add many-container interleaved requests test

* Perform test result verification in parallel

* Ensure recording deletions

* Implement concurrent JMX connection and enable timed reuse

* Remove explicit public connect method

All consumers of TargetConnectionManager now use executeConnectedTask and use the cached connection semantics, with manual resource handling and closure removed

* Do not expose RemovalListener in public interface

* Invalidate cached connection if explicitly closed

* Implement method for long-running operations to mark connection as still in use

* Report generation lock should attempt fairness

* Minor typo fix

* Fix logger message format